[package]
name = "aetheron-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Framework
axum = { version = "0.8.4" }

# Async runtime
tokio = { version = "1.46.1", features = ["full"] }

# Logging / debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"